Fix z-index order of overlay input being wrong

--- a/static/style/less/main.less
+++ b/static/style/less/main.less
@@ -131,6 +131,7 @@ input:invalid {
 
 .overlay-input {
   @extra-padding: .4rem;
+  z-index: (@max-z-index - 10) !important;
   white-space: nowrap;
   font-size: 1.025em;
   background-color: transparent;
@@ -211,7 +212,7 @@ input:invalid {
     @floating-padding: (@overlay-button-dims / 2) + @overlay-padding;
     padding: 0 @floating-padding;
     margin: 0 -@floating-padding;
-    z-index: 1;
+    z-index: (@max-z-index - 2);
 
     position: absolute;
     top: 0;
